--- a/staff/federico-alejandro/vanilla-app/index.css
+++ b/staff/federico-alejandro/vanilla-app/index.css
@@ -11,10 +11,8 @@ body {
 body {
     display: flex;
     margin: 0;
-    background-color: #EFEDF7;
-    
-
-    
+    background:linear-gradient(#d4cbf1 10px, white);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 button {
@@ -37,6 +35,7 @@ h1 {
     align-items: center;
     justify-content: center;
     gap: .5rem;
+    box-sizing: border-box;
     /*color: white;*/
 }
 
@@ -48,24 +47,41 @@ h1 {
     width: 100%;
 }
 
+
+
 .container--content-start {
     justify-content: start;
+}
+.container--items-start {
+    align-items: start;
 }
 .container--row {
     flex-direction: row;
 }    
 .container--content-space-between {
-    background-color:#BBE5ED;
+    background-color:#ffffff;
     justify-content: space-between;
     height: 80px;
     font-family: Arial, Helvetica, sans-serif;
 }
-.settings {
-    display: flex;
-    align-items: center;
+/*.icons--menu {
+    display: flexbox;
+    flex-direction: column;
+    justify-content: right;
+}*/
+.buttons--save {
+    margin: 5px;
 }
 
 
+
+.container--padding-s {
+    padding: .5rem;
+}
+
+.container--padding-m {
+    padding: .1rem;
+}
 
 .container--padding-h-s {
     padding: 0.5rem;
@@ -73,6 +89,22 @@ h1 {
 
 .container--padding-h-m {
     padding: 0.1rem;
+}
+
+.container--border {
+    border: 1px solid black;
+    width: 100px;
+    height: 200px;
+    background-color: white;
+    box-shadow: 10px 5px 5px gray;
+    margin: 10px;
+    
+}
+.container--border-i {
+    border: 1px solid black ;
+    border-radius: 5px;
+    margin-top: 5px;
+    align-items: flex-start;
 }
 
 .user-name {
@@ -102,20 +134,41 @@ h1 {
     width: 60px;
     height: 60px;
     border: transparent;
-    background-color: #BBE5ED;
+    background-color: #ffffff;
+}
+.icons-menu-settings {
+    display: flex;
+    
+    flex-direction: column;
+    justify-content: right;
+    right: 5px;
+    top: 80px;
+     
 }
 
 
 
 
 
-
 /*LOGIN PAGE*/
+.container--login-header {
+    background-color:#ffffff;
+    height: 80px;
+    
+}
+.logo-trello {
+   width: 120px;
+   position: absolute;
+   top: 4px;
+  
+}
+
+
 .container--login  {
-    border-color: black;
+    border-radius: 8px;
     box-shadow: 10px 5px 5px gray;
-    background-color: #0687a7;
-    height: 280px;
+    background-color: #7a75bb;
+    height: 295px;
     width: 250px;
 }
 .container__item--left {
@@ -138,11 +191,28 @@ h1 {
 }
 .container--register {
     border-color: black;
+    border-radius: 8px;
     box-shadow: 10px 5px 5px gray;
-    background-color: #0687a7;
-    height: 280px;
+    background-color:#7a75bb;
+    height: 320px;
     width: 250px;
 }
+.button-tasks {
+    margin-top:auto;
+    max-width: max-content;
+    font-size: 10px;
+    border: transparent;
+    border-radius: 5px;
+    height: 30px;
+    background-color: rgba(0, 94, 255, 0.942);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.login--button{
+    margin:10px;
+}
+
 
 
 
