--- a/staff/jaume-rodriguez/vanilla-app.1/index.css
+++ b/staff/jaume-rodriguez/vanilla-app.1/index.css
@@ -322,8 +322,8 @@ form img{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 0 1rem;
-    gap: 1rem;
+    margin: 1rem 1rem;
+    gap: 0rem 1rem;
 }
 
 .tasks__panel__content__column{
@@ -342,14 +342,14 @@ form img{
     background-color: #f4f5f7;
     width: 100%;
     padding: 1rem;
-    margin: 1rem 0rem;
+    font-size: 1rem;
 }
 
 .tasks__panel__add-button{
     align-self: center;
     transform: scale(0.9);
     padding: 0.51rem;
-    background-color: rgb(38, 139, 247);
+    background-color: rgb(81, 148, 219);
     border-radius: 0.2rem;
     color: white;
     margin: 1rem 0.1rem;
@@ -358,4 +358,29 @@ form img{
 }
 .tasks__panel__add-button:hover{
     background-color: #026aa7;
+}
+
+.task__card{
+    border: solid #dfe1e6 0.1rem;
+    width: 100%;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 1rem;
+}
+
+.task__card__button-delete{
+    align-self: center;
+    transform: scale(1);
+    padding: 0.51rem;
+    border-radius: 0.2rem;
+    margin: 0.6rem -14rem -0.5rem  0rem;
+    cursor: pointer;
+    border-style: none;
+}
+
+.task__card__button-delete:hover{
+    background-color: #ff4343;
+    color: white;
 }
