added new styles on login, register and task panel. App still working 100%

--- a/staff/jaume-rodriguez/vanilla-app.1/index.css
+++ b/staff/jaume-rodriguez/vanilla-app.1/index.css
@@ -12,7 +12,6 @@ a{
 
 html, body{
     height: 100%;
-    background-color: rgb(255, 255, 255);
 }
 
 main{
@@ -24,7 +23,7 @@ h1{
 }
 
 div h1{
-    color: rgb(93, 93, 93);
+    color: rgb(255, 255, 255);
     font-size: 1.2rem;
     font-weight: normal;
     margin-bottom: 1rem;
@@ -50,13 +49,13 @@ form img{
 
 .anchor__login{
     margin-top: 1.4rem;
-    color: rgb(72, 136, 255);
+    color: rgb(255, 255, 255);
     font-size: small;
 }
 
 .anchor__login:hover{
     background-color: transparent;
-    color: rgb(255, 93, 93);
+    color: rgb(255, 203, 80);
 }
 
 .container-flex{
@@ -66,6 +65,7 @@ form img{
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
+    background-image: linear-gradient(to bottom right, #026aa7, #004369)
 }
 
 /* FORMULARIO */
@@ -77,9 +77,11 @@ form img{
     gap: 0.2rem;
     padding: 3.5rem 3rem;
     border-radius: 0.2rem;
-    border-style: solid;
-    border-width: 0.05rem;
-    border-color: rgb(197, 197, 197);
+    background-color: white;
+}
+
+.form__img{
+    filter: grayscale();
 }
 
 .button{
@@ -314,7 +316,6 @@ form img{
     align-content: center;
     align-self: center;
     z-index: 1;
-    background-color: #ffffff;
 }
 
 .tasks__panel__content{
@@ -349,7 +350,7 @@ form img{
     align-self: center;
     transform: scale(0.9);
     padding: 0.51rem;
-    background-color: rgb(81, 148, 219);
+    background-color:  #026aa7;
     border-radius: 0.2rem;
     color: white;
     margin: 1rem 0.1rem;
@@ -357,7 +358,7 @@ form img{
     border-style: none;
 }
 .tasks__panel__add-button:hover{
-    background-color: #026aa7;
+    background-color: #0083cf;
 }
 
 .task__card{
@@ -368,6 +369,7 @@ form img{
     justify-content: center;
     flex-direction: column;
     margin-bottom: 1rem;
+    box-shadow: #d1d1d1 0 0.1rem 0rem 0;
 }
 
 .task__card__button-delete{
