--- a/staff/isaac-diaz/vanilla-app/index.css
+++ b/staff/isaac-diaz/vanilla-app/index.css
@@ -1,9 +1,23 @@
 html, body {
     height: 100%;
+    
 }
+
 
 body {
     margin: 0;
+}
+
+.image--width{
+    width: 150px;     
+}
+
+.header--height{
+    height: 60px;
+}
+
+.color{
+    background-color: #11d3ea;
 }
 
 /* layout - BEM */
@@ -13,9 +27,12 @@ body {
 .container {
     display: flex; 
     flex-direction: column; 
-    align-items: center; 
-    justify-content: center;
+    align-items: center;   
     gap: .5rem;
+}
+
+.z-index{
+    z-index: 1;
 }
 
 .container--full {
@@ -51,6 +68,9 @@ body {
     padding: 0 1rem;
 }
 
+.div-revolution {
+    position: absolute;
+}
 
 /* container__item */
 
@@ -60,4 +80,8 @@ body {
 
 .container__item--right { /* block__element--modifier */
     align-self: end;
+}
+
+.border{
+    border: 1px solid #000
 }
