--- a/staff/xavi-grandes/vanilla-app-v0/index.css
+++ b/staff/xavi-grandes/vanilla-app-v0/index.css
@@ -148,7 +148,6 @@ a {
     justify-content: space-between;
     flex-direction: column;
     margin: 0px;
-    height: 100vh;
 }
 
 .home-header{
@@ -210,15 +209,34 @@ a {
 
 
 .tasks-panel {
-    background-color: aliceblue;
+    /* background-color: aliceblue; */
     display: flex;
     justify-content: space-around;
     margin: 15px 10%;
+    gap: ;
 }
 
 .tasks-title {
-    background-color: rgba(255, 255, 255, 0.20);
+    /* background-color: rgba(255, 255, 255, 0.20); */
     margin: 0;
     padding: 10px 0;
     text-transform: uppercase;
+}
+
+.todo-column, .doing-column, .done-column {
+    width: 25%;
+    background-color: white;
+    padding: 1rem;
+}
+
+.tasks-panel {
+    padding: 1rem;
+}
+
+.task-item {
+    border: 1px solid black;
+    width: 100%;
+    margin-top: 1rem;
+    height: 3rem;
+    padding-left: 5px;
 }
