--- a/staff/federico-alejandro/vanilla-app/index.css
+++ b/staff/federico-alejandro/vanilla-app/index.css
@@ -71,6 +71,19 @@ h1 {
 }*/
 .buttons--save {
     margin: 5px;
+    max-width: max-content;
+    font-size: 10px;
+    border: transparent;
+    border-radius: 5px;
+    height: 20px;
+    background-color: rgba(0, 94, 255, 0.942);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.update-form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end ;
 }
 
 
@@ -110,6 +123,13 @@ h1 {
 .user-name {
     color: black;
     font-size: 25px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 10px;
+}
+.logo-trello{
+    
+    right: 730px;
 }
 
 .container--home {
@@ -135,16 +155,30 @@ h1 {
     height: 60px;
     border: transparent;
     background-color: #ffffff;
-}
-.icons-menu-settings {
-    display: flex;
     
-    flex-direction: column;
-    justify-content: right;
-    right: 5px;
-    top: 80px;
-     
 }
+
+
+.container-menu-panel {
+    
+    display:flex;
+    flex-direction: column;
+    position: absolute;
+    top: 80px;
+    right:0;
+    gap:0;
+}
+
+.settings--menu {
+    display: flex ; 
+    
+    
+    
+    
+
+}
+    
+
 
 
 
