--- a/staff/jaume-rodriguez/FinalProject/app/src/index.css
+++ b/staff/jaume-rodriguez/FinalProject/app/src/index.css
@@ -18,3 +18,21 @@ select:-webkit-autofill:focus {
   transition: background-color 5000s ease-in-out 0s;
   color: white;
 }
+
+.scrollbar::-webkit-scrollbar {
+  width: 20px;
+  height: 20px;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+  border: 3px solid #1a1a19;
+  background: #1a1a19;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+  background: #2b2b2a;
+}
+
+.scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #131313;
+}
