feat(FinalProject/app&api): add couldown and progression into the adventures, new style for adventure page and pop ups adventure steps. Refactor home, settings, adventures and playadventure. New logic front for playAdventure

--- a/staff/jaume-rodriguez/FinalProject/app/src/index.css
+++ b/staff/jaume-rodriguez/FinalProject/app/src/index.css
@@ -30,7 +30,7 @@ select:-webkit-autofill:focus {
 }
 
 .scrollbar::-webkit-scrollbar-thumb {
-  background: #2b2b2a;
+  background: #1a1a19;
 }
 
 .scrollbar::-webkit-scrollbar-thumb:hover {
